base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-bridge-base
spec:
  replicas: 1
  strategy:
    rollingUpdates: null
    type: Recreate
  template:
    spec:
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: mautrix-bridge
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 29318
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            failureThreshold: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
