base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mautrix-bridge
  labels:
    app.kubernetes.io/name: mautrix-bridge
spec:
  type: ClusterIP
  ports:
    - port: 29318
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mautrix-bridge
  publishNotReadyAddresses: true
